Changelog
=========

0.10.uniudine (unreleased)
-----------------

- add folder compatibility and a view with unrestricted query.
  [lucas]


0.10 (2013-10-15)
-----------------

- Changed Readme.txt and commented unused code
  [davidemoro]


0.9 (2013-10-15)
----------------

- Fixed issue #2 (tokenrole broken for Plone>4.2.5)
  [davidemoro]

- Fixed issue #4 (can edit permission problems).
  Only Managers and Site Administrators will be able to manage token roles
  [davidemoro]


0.8 (2012-07-19)
----------------

- i18n fixes on message errors
  [davidemoro]

- Added a date validator, you shouldn't choose a token end date
  in the past.
  [davidemoro]


0.7 (2012-06-14)
----------------

- i18n improved and fixed 
  [giacomos]


0.6 (2012-06-12)
----------------

- Token role enabled just for non-folderish items.
  [davidemoro]

- Removed the "Can add" option from token role
  [davidemoro]

- Modified token delete form
  [davidemoro]

- Modified all z3c forms, added a Cancel button
  [davidemoro]

- Updated po files
  [davidemoro]

- Registered a tokenrole.css (if you are upgrading redomino.tokenrole to this versione you need to reinstall it)
  [davidemoro]

- Some UX improvements on token manage view
  [davidemoro, giacomos]

- Share token via email. Now the message text is configurable by the user
  [giacomos]


0.5 (2012-04-27)
----------------

- The share with link action is available by default without having to enable 
  token role on the current item or section.
  [davidemoro]

- Get rid of the enable and disable token role action, it is enabled by default now.
  Important: if you upgrade redomino.tokenrole to this version you should delete from
  the category object_buttons of portal_actions the enable_tokenrole and disable_tokenrole.
  [davidemoro]

- Granted the token role permission to users with Editor role
  [davidemoro]

- Enabled the locales/en directory
  [davidemoro]

- Added new tests
  [davidemoro]

- English translation
  [dpollino]

