@@ -24,6 +24,7 @@
                             b_start python:request.get('b_start', 0);
                             batch python:isinstance(folderContents, Batch) and folderContents or Batch(folderContents, limit_display or 100, int(b_start), orphan=1);
                             isAnon context/@@plone_portal_state/anonymous;
+                            isEditor python:checkPermission('Modify portal content', context);
                             normalizeString nocall: context/plone_utils/normalizeString;
                             toLocalizedTime nocall: context/@@plone/toLocalizedTime;
                             show_about python:not isAnon or site_properties.allowAnonymousViewAbout;
@@ -33,7 +34,139 @@
 
         <tal:listing condition="batch">
             <dl metal:define-slot="entries">
-                <metal:block define-macro="entries" extend-macro="context/folder_listing/macros/entries"/>
+                <metal:block define-macro="entries" extend-macro="context/folder_listing/macros/entries">
+                    <metal:block fill-slot="entry">
+                        <dt metal:define-macro="listitem"
+                            tal:attributes="class python:(item_type == 'Event') and 'vevent' or ''">
+
+                            <span class="summary">
+                                <img tal:replace="structure item_icon/html_tag" />
+                                <a href="#" tal:condition="not:item/is_folderish"
+                                   tal:attributes="href python:(item_type in use_view_action) and item_url+'/view' or item_url;
+                                                   class string:$item_type_class $item_wf_state_class url"
+                                   tal:content="item_title_or_id">
+                                    Item Title
+                                </a>
+                                <a href="#" tal:condition="item/is_folderish"
+                                   tal:attributes="href string:$item_url/private_token_listing;
+                                                   class string:$item_type_class $item_wf_state_class url"
+                                   tal:content="item_title_or_id">
+                                    Item Title
+                                </a>
+                            </span>
+
+                            <span class="documentByLine">
+                                <span tal:condition="python: item_type == 'Event' and item_sametime"
+                                      i18n:translate="label_event_byline_onlyfrom">
+                                     <abbr class="dtstart"
+                                           tal:attributes="title python:item_start"
+                                           tal:content="python:toLocalizedTime(item_start,long_format=1)"
+                                           i18n:name="start">from date</abbr>
+                                </span>
+                                <span tal:condition="python: item_type == 'Event' and item_samedate and not item_sametime"
+                                      i18n:translate="label_event_byline_samedate">
+                                     <abbr class="dtstart"
+                                           tal:attributes="title python:item_start"
+                                           tal:content="python:toLocalizedTime(item_start)"
+                                           i18n:name="start">from date</abbr> from
+                                     <abbr class="dtstart"
+                                           tal:attributes="title python:item_start"
+                                           tal:content="python:toLocalizedTime(item_start,time_only=1)"
+                                           i18n:name="starttime">from time</abbr> to
+                                     <abbr class="dtend"
+                                           tal:attributes="title python:item_end"
+                                           tal:content="python:toLocalizedTime(item_end,time_only=1)"
+                                           i18n:name="end">to time</abbr>
+                                </span>
+                                <span tal:condition="python: item_type == 'Event' and not item_samedate and not item_sametime"
+                                      i18n:translate="label_event_byline">
+                                      from
+                                           <abbr class="dtstart"
+                                           tal:attributes="title python:item_start"
+                                           tal:content="python:toLocalizedTime(item_start,long_format=1)"
+                                           i18n:name="start">from date</abbr> to
+                                     <abbr class="dtend"
+                                           tal:attributes="title python:item_end"
+                                           tal:content="python:toLocalizedTime(item_end,long_format=1)"
+                                           i18n:name="end">to date</abbr>
+                                </span>
+                                 <span tal:condition="python: item_type == 'Event' and item.location"
+                                      i18n:translate="label_event_byline_location">&mdash;
+                                     <span tal:content="string:${item/location}"
+                                           class="location"
+                                           i18n:name="location">Oslo</span>,
+                                </span>
+                                <tal:byline condition="show_about">
+                                    &mdash;
+
+                                    <tal:name tal:condition="item_creator"
+                                        tal:define="author python:pas_member.info(item_creator);
+                                                    creator_short_form author/username;
+                                                    creator_long_form string:?author=${author/username};
+                                                    creator_is_openid python:'/' in creator_short_form;
+                                                    creator_id python:(creator_short_form, creator_long_form)[creator_is_openid];">
+                                      <span i18n:translate="label_by_author">
+                                        by
+                                      <a href="#"
+                                         tal:attributes="href string:${navigation_root_url}/author/${item_creator}"
+                                         tal:content="author/name_or_id"
+                                         tal:omit-tag="not:author"
+                                         i18n:name="author">
+                                        Bob Dobalina
+                                      </a>
+                                      </span>
+
+                                    </tal:name>
+
+                                    <tal:modified condition="python: item_type != 'Event'">
+                                        &mdash;
+                                        <tal:mod i18n:translate="box_last_modified">
+                                          last modified
+                                        </tal:mod>
+                                        <span tal:replace="python:toLocalizedTime(item_modified,long_format=1)">
+                                          August 16, 2001 at 23:35:59
+                                        </span>
+                                    </tal:modified>
+
+                                    <metal:description define-slot="description_slot">
+                                        <tal:comment replace="nothing">
+                                            Place custom listing info for custom types here
+                                        </tal:comment>
+                                    </metal:description>
+
+                                    <span class="state-expired"
+                                          tal:condition="item/isExpired|item/expires/nothing"
+                                          i18n:translate="time_expired">expired</span>
+
+                                    <span class="state-hidden state-expired"
+                                          tal:condition="item/exclude_from_nav|nothing">
+                                          &mdash; <span
+                                          i18n:domain="atcontenttypes"
+                                          i18n:translate="label_excluded_from_nav">hidden</span>
+                                    </span>
+
+                                </tal:byline>
+
+                                <tal:file-info condition="python: item_type in ('File', 'Image')">
+                                    &mdash;
+                                    <span i18n:domain="plone" i18n:translate="" tal:replace="item/file_contenttype ">
+                                        PDF Document
+                                    </span>
+                                    (<span tal:replace="item/getObjSize" />)
+                                </tal:file-info>
+
+                            </span>
+
+                        </dt>
+
+                        <dd tal:condition="item_description">
+                            <span class="description"
+                                   tal:content="item_description">
+                                description
+                            </span>
+                        </dd>
+                    </metal:block>
+                </metal:block>
             </dl>
         </tal:listing>
 
